# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.10
#

2005-08-03 10:24:05 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-29

    Summary:
      web, half fix "build_url" method
    Revision:
      itools--main--0.10--patch-29

    It should use itools schemas, yet to be done.

    modified files:
     Changelog web/request.py


2005-08-02 09:04:14 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-28

    Summary:
      xml, omit STL namespace after processing, from herve (#81)
    Revision:
      itools--main--0.10--patch-28


    modified files:
     Changelog xml/STL.py


2005-08-01 17:30:56 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-27

    Summary:
      resources, now zope2 resources require Zope 2.8
    Revision:
      itools--main--0.10--patch-27


    modified files:
     Changelog resources/zope2.py


2005-08-01 15:13:21 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-26

    Summary:
      resources, use bobobase_modification_time for Zope 2 resources
    Revision:
      itools--main--0.10--patch-26


    modified files:
     Changelog handlers/Handler.py handlers/transactions.py
     resources/base.py resources/zope2.py


2005-08-01 12:55:58 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-25

    Summary:
      xml, discard comments not included in the root element
    Revision:
      itools--main--0.10--patch-25


    modified files:
     Changelog xml/XML.py


2005-08-01 12:54:13 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-24

    Summary:
      xml, correctly deal with CDATA sections
    Revision:
      itools--main--0.10--patch-24


    modified files:
     Changelog xml/parser.py


2005-08-01 12:22:42 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-23

    Summary:
      include itools.rss in the setup script
    Revision:
      itools--main--0.10--patch-23


    modified files:
     Changelog setup.py

