@@ -203,6 +203,10 @@ class Response(File):
                         max_age='0')
 
 
+    def get_cookie(self, name):
+        return self.state.cookies.get(name)
+
+
     #########################################################################
     # For Zope
     #########################################################################
